# coding_agent_prototype

./: .commit_msg  .cursorrules  .gitignore  .pre-commit-config.yaml  HOT_RELOAD.md  MARKDOWN_RENDERING.md  PLAN.md  README.md  Taskfile.yml  demo-runs.jsonl  demo_autocomplete.py  demo_image_read.py  demo_markdown.py  http_server.py  learnings.md  main.py  pyproject.toml  rpc_server.py  vlm-report.html
.changeset/: add-image-reading.md
evals/: __init__.py  graders.py  harness.py  models.py  report_html.py  results.py  run.py  swebench_grade.py
evals/suites/: coding.py  gsm8k.py  humaneval.py  planning.py  polyglot.py  reasoning.py  smoke.py  swebench.py  toolcall.py  vlm.py
plans/: 2026-06-19-docusaurus-docs-site.md  2026-06-20-agent-memory.md  2026-06-20-paste-images-ctrl-v.md  2026-06-20-pluggable-agent-architectures.md  2026-06-20-tui-debug-hot-reload.md  2026-06-20-tui-markdown-rendering.md  2026-06-21-eval-harness.md  2026-06-21-reasoning-coding-benchmarks.md  2026-06-21-skill-slash-command.md  2026-06-21-tui-slash-autocomplete.md  README.md  _template.md
plans/tutorial/: README.md  phase-01-talk-to-a-model.md  phase-02-the-agent-loop.md  phase-03-streaming.md  phase-04-your-first-tool.md  phase-05-streaming-tool-calls.md  phase-06-a-toolbox.md  phase-14-1-sdk.md  (+25 more)
src/: agent.py  allowlist.py  architecture.py  compaction.py  config.py  hooks.py  logging_config.py  mcp_client.py  memory.py  policy.py  project_instructions.py  prompts.py  provider.py  renderer.py  renderer_none.py  renderer_stdout.py  sandbox.py  sdk.py  skills.py  tools.py  types_.py
tests/: conftest.py  manual_test_selection.md  test_activity_panel.py  test_agent.py  test_agent_skills.py  test_allowlist.py  test_app_image_paste.py  test_architecture.py  test_cli_image_integration.py  test_cli_model_flag.py  test_clipboard.py  test_commands.py  test_compaction.py  test_config.py  test_dir_flag.py  test_evals_coding.py  test_evals_datasets.py  test_evals_graders.py  test_evals_harness.py  test_evals_planning.py  test_evals_polyglot.py  test_evals_reasoning.py  test_evals_report_html.py  test_evals_results.py  test_evals_run.py  test_evals_run_html.py  test_evals_swebench.py  test_evals_swebench_grade.py  test_evals_toolcall.py  test_evals_vlm.py  test_evaluator_optimizer.py  test_event_seam.py  test_extended_thinking.py  test_hooks.py  test_hot_reload.py  test_image_integration.py  test_image_lift.py  test_initial_task.py  test_input_status.py  test_json_event_stream.py  (+37 more)
website/: AUTHORING.md  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+169 files in other folders)
