[project]
name = "coding-agent-from-scratch"
version = "0.1.0"
description = "A real terminal coding agent in ~750 lines of Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "granian>=2.7.6",
    "litellm>=1.51.0",
    "loguru>=0.7.3",
    "mcp>=1.28.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "textual>=8.2.7",
    "watchfiles>=0.24.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]
# Heavy, Docker-backed deps used only to GRADE SWE-bench predictions. Kept out of
# the default install; pull with `uv sync --group evals`.
evals = [
    "swebench>=3.0.0",
]

[tool.pytest.ini_options]
# src/ is not a package (no __init__.py); put it on the path for imports.
# "." puts the repo root on the path so the top-level evals/ package imports.
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: subprocess / network-boundary tests (e.g. the RPC server).",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ty.environment]
# src/ is not a package (no __init__.py); mirror pytest's pythonpath so ty
# resolves intra-src imports.
extra-paths = ["src"]
